# src/controllers/unread.js
@@ -7,9 +7,7 @@ const querystring = require('querystring');
 const meta = require('../meta');
 const pagination = require('../pagination');
 const user = require('../user');
-const categories = require('../categories');
 const topics = require('../topics');
-const plugins = require('../plugins');
 const helpers = require('./helpers');
 
 const unreadController = module.exports;
@@ -18,8 +16,8 @@ unreadController.get = async function (req, res) {
 	const cid = req.query.cid;
 	const filter = req.query.filter || '';
 
-	const [watchedCategories, userSettings, isPrivileged] = await Promise.all([
-		getWatchedCategories(req.uid, cid, filter),
+	const [categoryData, userSettings, isPrivileged] = await Promise.all([
+		helpers.getSelectedCategory(cid),
 		user.getSettings(req.uid),
 		user.isPrivileged(req.uid),
 	]);
@@ -47,10 +45,9 @@ unreadController.get = async function (req, res) {
 	}
 	data.showSelect = true;
 	data.showTopicTools = isPrivileged;
-	data.categories = watchedCategories.categories;
 	data.allCategoriesUrl = 'unread' + helpers.buildQueryString(req.query, 'cid', '');
-	data.selectedCategory = watchedCategories.selectedCategory;
-	data.selectedCids = watchedCategories.selectedCids;
+	data.selectedCategory = categoryData.selectedCategory;
+	data.selectedCids = categoryData.selectedCids;
 	if (req.originalUrl.startsWith(nconf.get('relative_path') + '/api/unread') || req.originalUrl.startsWith(nconf.get('relative_path') + '/unread')) {
 		data.title = '[[pages:unread]]';
 		data.breadcrumbs = helpers.buildBreadcrumbs([{ text: '[[unread:title]]' }]);
@@ -62,17 +59,6 @@ unreadController.get = async function (req, res) {
 
 	res.render('unread', data);
 };
-
-async function getWatchedCategories(uid, cid, filter) {
-	if (plugins.hooks.hasListeners('filter:unread.categories')) {
-		return await plugins.hooks.fire('filter:unread.categories', { uid: uid, cid: cid });
-	}
-	const states = [categories.watchStates.watching];
-	if (filter === 'watched') {
-		states.push(categories.watchStates.notwatching, categories.watchStates.ignoring);
-	}
-	return await helpers.getCategoriesByStates(uid, cid, states);
-}
 
 unreadController.unreadTotal = async function (req, res, next) {
 	const filter = req.query.filter || '';
